# ParallelOstreamModifier

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  ParallelGzipStreambuf.cpp  ParallelGzipStreambuf.h  cmake_install.cmake  compressed_output  main  test.cpp  test2.cpp  test2.zlib
src/: GzipCompressor.cpp  GzipCompressor.h  ParallelDataModifier.cpp  ParallelDataModifier.h  ParallelOstreamModifier.h  ParallelStreambufModifier.cpp  ParallelStreambufModifier.h  StreamBuffer_T.cpp  StreamBuffer_T.h  Streambuf_Modifier_t.cpp  TaskCache.cpp  TaskCache.h  UnitTests.cpp  installOpenMS.sh
src/IO_Basic/: ParallelOstreamModifier.cpp  ParallelOstreamModifier.h  ParallelStreambufModifier.cpp  ParallelStreambufModifier.h
src/modifier/: GzipCompressor.cpp  GzipCompressor.h  ParallelDataModifier.cpp  ParallelDataModifier.h
src/old_code_base/: GzipCompressor.cpp  GzipCompressor.h  ParallelDataModifier.cpp  ParallelOstreamModifier.h  ParallelStreambufModifier.h  TaskCache.cpp
src/tests/: Stress_test.cpp  installOpenMS.sh
